@@ -22,6 +22,11 @@ Copies the content of files from or to another remote.
   Use this option to copy the content of files from the local repository
   to the specified remote.
 
+* `--jobs=N` `-JN`
+
+  Enables parallel transfers with up to the specified number of jobs
+  running at once. For example: `-J10`
+
 * `--auto`
 
   Rather than copying all files, only copy files that don't yet have
