@@ -22,6 +22,11 @@ Moves the content of files from or to another remote.
   Use this option to move the content of files from the local repository
   to the specified remote.
 
+* `--jobs=N` `-JN`
+
+  Enables parallel transfers with up to the specified number of jobs
+  running at once. For example: `-J10`
+
 * `--all`
 
   Rather than specifying a filename or path to move, this option can be
